<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="app_name">FoxNotes</string>
    <string name="note_hint">Type here …</string>
    <string name="note_check_box">Check box</string>
    <string name="save_note_description">Successfully saved!</string>
    <string name="checkbox_list">CheckBox List:</string>
    <string name="new_image">new image</string>

    <string name="welcome_message">welcome</string>
    <string name="delete_task_dialog_title">Are you sure to delete task?</string>
    <string name="delete_note_dialog_title">Are you sure to delete note?</string>
    <string name="delete_dialog_cancel">Cancel</string>
    <string name="delete_dialog_accept">Accept</string>
    <string name="user_not_in_sys">User not in system</string>
    <string name="unauthorized_username">Anonymous fox</string>

    <string name="task_title">Title</string>
    <string name="task_text">Item Text</string>
    <string name="welcome_to_foxnotes">Welcome to FoxNotes</string>
    <string name="first_enter_text">To save your notes you must choose on of the options:</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="anonymous_sign_up">Anonymous sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with">Sign in with:</string>
    <string name="authenticate_with_google">Authenticate with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="please_wait">Please wait...</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title">Title</string>
    <string name="task_description">Task description</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="date_of_creation">Date of creation</string>
    <string name="check_again">Check again</string>
    <string name="check_email_verification">Email not verified, check again</string>
    <string name="resend_activation_link">Resend activation link</string>
    <string name="sign_out">Sign out</string>
    <string name="back">Back</string>
    <string name="password_reset_email">Enter email for password reset</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="tasks">Tasks</string>
    <string name="notes">Notes</string>
    <string name="edit">edit</string>
    <string name="one_column">one column</string>
    <string name="two_columns">two columns</string>


</resources>