<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstEnterActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/reg_img"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginVertical="20dp"
        android:padding="5dp"
        android:scaleType="centerInside"
        app:shapeAppearanceOverlay="@style/circle"
        app:srcCompat="@drawable/first_fox_img"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_foxnotes"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/orange"
        android:layout_marginVertical="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_img" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome">


        <TextView
            android:id="@+id/first_enter_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/first_enter_text"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toStartOf="@id/register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_enter_text" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sign_in_button"
            app:layout_constraintTop_toBottomOf="@id/first_enter_text" />

        <Button
            android:id="@+id/anon_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"
            android:layout_marginTop="30dp"
            android:text="@string/anonymous_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>