<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.LoginActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/reg_img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginVertical="20dp"
        android:padding="5dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circle"
        app:srcCompat="@drawable/fox_icon_logo_white"
        app:strokeColor="@color/black"
        app:strokeWidth="4dp" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_img"
        app:layout_constraintBottom_toTopOf="@id/inputs" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textColorHint="@color/text_black"
            app:boxBackgroundColor="@color/light_grey"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/black"
            app:errorEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/password_text_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/text_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/text_black"
            app:boxBackgroundColor="@color/light_grey"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/black"
            app:errorEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/login_password_visibility1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text_field"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/text_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/login_password_visibility1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:textColor="@color/text_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_field" />


        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/light_purple"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_field" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_visibility1" />

        <TextView
            android:id="@+id/reg_another_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/sign_in_with"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_another_method">

            <ImageButton
                android:id="@+id/reg_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/google_icon"
                android:contentDescription="@string/authenticate_with_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
            <!--                <ImageButton-->
            <!--                    android:id="@+id/reg_facebook"-->
            <!--                    android:layout_height="30dp"-->
            <!--                    android:layout_width="30dp"-->
            <!--                    android:layout_margin="10dp"-->
            <!--                    android:contentDescription="@string/save_note_description"-->
            <!--                    android:background="@drawable/google_icon"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                    app:layout_constraintRight_toRightOf="parent"-->
            <!--                    />-->
            <!--                <ImageButton-->
            <!--                    android:id="@+id/reg_github"-->
            <!--                    android:layout_height="30dp"-->
            <!--                    android:layout_width="30dp"-->
            <!--                    android:layout_margin="10dp"-->
            <!--                    android:contentDescription="@string/save_note_description"-->
            <!--                    android:background="@drawable/google_icon"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                    app:layout_constraintRight_toRightOf="parent"-->
            <!--                    />-->
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/text_black" />

            <TextView
                android:id="@+id/goto_register_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/sign_up"
                android:textColor="@color/purple_200"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>